# txt2pdf

./: .flake8  .gitignore  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
scripts/: txt2pdf
tests/: defaults.py  test_cli.py  test_core.py
tests/resources/: input.css
txt2pdf/: __init__.py  cli.py  core.py  pdfgenerator.py
